🎍👟 Checkpoint ./server.js:6898884/237 ./views/index.handlebars:6898884/99 ./views/kod_paylas.handlebars:6898884/30 ./views/bilgilendirme.handlebars:6898884/61 ./package.json:6898884/34

--- a/views/bilgilendirme.handlebars
+++ b/views/bilgilendirme.handlebars
@@ -1,4 +1,4 @@
-<title>Code Academy - Bilgilendirme</title>
+<title>DarkCode - Bilgilendirme</title>
 <br><br>
 <main>
   <div class="container" style="padding: 1rem;">
@@ -15,10 +15,10 @@
       <li>
        Sunucumuzdaki kodların değerlerine göre sıralaması:
         <ul>
-          <li>Hazır Sistemler (30 davet)</li>
-          <li>Elmas Kodlar (20 davet)</li>
-          <li>Altın Kodlar (10 davet)</li>
-          <li>Normal Kodlar (0 davet)</li>
+          <li>Hazır Sistemler (60 davet)</li>
+          <li>Elmas Kodlar (35 davet)</li>
+          <li>Altın Kodlar (20 davet)</li>
+          <li>Normal Kodlar (Bedava)</li>
         </ul>
       </li>
       <li>Kodları görebilmek için, rollerine sahip olmalısınız. Rollere erişebilmek için yanlarında belirtilmiş davet sayısına ulaşmanız gerekiyor. Normal kodlar herkese açıktır, siteden ulaşabilirsiniz.</li>
