--- a/views/kod_paylas.handlebars
+++ b/views/kod_paylas.handlebars
@@ -1,4 +1,4 @@
-<title>Code Academy - KOD PAYLAŞIMI</title>
+<title>DarkCode - KOD PAYLAŞIMI</title>
 <main>
   <div class="container">
     <h1 class="text-center">
