--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
-<title>Code Academy - ANA SAYFA</title>
+<title>DarkCode - ANA SAYFA</title>
 <br><br>
 <main class="container-fluid bg-lightdark" style="padding: 1rem;">
 <div class="col-12 col-md-12 d-flex flex-column align-items-center justify-content-center text-center">
   <div>
     <img src="https://cdn.discordapp.com/icons/639501091586965505/a_830c2bcfa4f1529946e82f15441a1227.gif" style="border-radius: 50%;"></div><br>
-    <h1 class="text-light font-weight-light">Code Academy</h1>
+    <h1 class="text-light font-weight-light">DarkCode</h1>
     <h2 class="text-light font-weight-light">
        Kodlama Destek ve Kod Paylaşım Sunucusu
   </h2>
@@ -30,7 +30,7 @@
       <a href="/elmas" class="btn btn-outline-primary">Elmas Kodlar</a>
     </div>
     <div class="btn-group">
-      <a href="/hazir" class="btn btn-outline-danger">Hazır Sistemler</a>
+      <a href="/hazir" class="btn btn-outline-danger">Hazır Altyapılar</a>
     </div><br><br>
     <div class="btn-group">
       <a href="/topluluk" class="btn btn-outline-success">Sizden Gelenler</a>
