🍨🐵 Checkpoint ./server.js:4311127/3:6898884/65 ./views/layouts/main.handlebars:4311127/614 ./views/hata.handlebars:4311127/27 ./views/hazir.handlebars:4311127/27 ./views/index.handlebars:4311127/110

--- a/views/hazir.handlebars
+++ b/views/hazir.handlebars
@@ -1,4 +1,4 @@
-<title>Code Academy - HAZIR SİSTEMLER</title>
+<title>Dark Code - HAZIR SİSTEMLER</title>
 <br><br>
   <h1 class="text-center text-light font-weight-bolder">
     Hazır Sistemler
