--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,10 +6,10 @@
     <img src="https://cdn.discordapp.com/icons/639501091586965505/a_830c2bcfa4f1529946e82f15441a1227.gif" style="border-radius: 50%;"></div><br>
     <h1 class="text-light font-weight-light">DarkCode</h1>
     <h2 class="text-light font-weight-light">
-       Kodlama Destek ve Kod Paylaşım Sunucusu
+       Kod Paylaşım Sunucusu
   </h2>
   <p class="h4 text-light font-weight-light">
-    Kodları görebilmek için <a href="/davet" target="_blank">Discord Sunucumuza</a> katılmanız gerekmektedir!
+    Tüm Kodları Görmek için <a href="/davet" target="_blank">Discord Sunucumuza</a> katılmanız gerekmektedir!
   </p>
   <!-- <p class="h4 text-light font-weight-light">
      <a href="/bilgilendirme" target="_blank">Kodlara bakmadan önce kesinlikle okuyunuz! (Tıkla git)</a>
