--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="HandheldFriendly" content="true">
-    <meta name="description" content="Code Academy Discord sunucusu kod paylaşım merkezi">
+    <meta name="description" content="Dark Code Discord sunucusu kod paylaşım merkezi">
     <meta name="keywords" content="kod, discord, bot, discord.js, copy, paste, copy paste, hazır kod, bot kodları">
-    <meta name="copyright" content="Code Academy 2018">
-    <meta name="author" content="Code Academy">
+    <meta name="copyright" content="Dark Code">
+    <meta name="author" content="Dark Code">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="https://cdn.discordapp.com/icons/639501091586965505/a_830c2bcfa4f1529946e82f15441a1227.gif" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" id="mainNav" style="background-color: black;">
       <a class="navbar-brand" href="/">
         <img src="https://cdn.discordapp.com/icons/639501091586965505/a_830c2bcfa4f1529946e82f15441a1227.gif" style="border-radius:50%" width="30" height="30" alt="">
-        Code Academy
+        Dark Code
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
           
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Kodlar
+              Tüm Kodları Görebilmek için
             </a>
             <div class="dropdown-menu bg-light" aria-labelledby="navbarDropdown">
               <a class="dropdown-item font-weight-bold" href="/normal" style="color: #595959;">Normal Kodlar</a>
@@ -77,28 +77,27 @@
         
         <div class="row d-flex justify-content-center">   
             <div class="col-12 col-sm-6 col-md-3 mt-4">
-              <h5>Yararlı Bağlantılar</h5>
+              <h5>Önemli Bağlantılar</h5>
                 <ul>
-                  <li><a href="https://github.com/barbarbar338/code-academy-source">Site Tamamen Açık Kaynaklı!</a></li>
+               
 
                   <li><a href="/giris">Giriş Yap</a></li>
-                  <li><a href="/discord" target="_blank">Discord Sunucumuz</a></li>
+                  <li><a href="https://discord.gg/ug26e4K" target="_blank">Discord Sunucumuz</a></li>
                   <li><a href="https://discord.js.org/#/docs/main/stable/general/welcome">Discord.js Dokümanlar</a></li>
                 </ul>
             </div>
             <div class="col-12 col-sm-6 col-md-3 mt-4">
               <h5>Geliştirici Takımı</h5>
                 <ul>
-                  <li><a href="https://discordapp.com/users/331846231514939392" target="_blank">barbarbar338</a></li>
-                  <li><a href="https://discordapp.com/users/460813657811582986" target="_blank">Yashinu</a></li>
-                  <li><a href="https://discordapp.com/users/558016135052787773" target="_blank">Alosha</a></li>
+                  <li><a href="#" target="_blank">𝐿𝑒𝒱𝒾𝓈𝓀𝒾.dcw</a></li>
+                  <li><a href="#" target="_blank">⭕⃤⁶⁶⁶ＢＩ̇ＬＡＬ🦋⃤</a></li>
                 </ul>
             </div>
           </div>
         <div class="row">
           <div class="col d-flex justify-content-between mb-2 mt-5">
           <small>&copy; <script>document.write(new Date().getFullYear());</script> Tüm Hakları Saklıdır</small>
-          <small>Code Academy Sahipleri tarafından <i class="fas fa-heart" style="color: #da284b"></i> ile yapıldı</small>
+          <small>Dark Code<i class="fas fa-heart" style="color: #da284b"></i></small>
           </div>
         </div>
       </div>
