--- a/views/hata.handlebars
+++ b/views/hata.handlebars
@@ -1,4 +1,4 @@
-<title>Code Academy - HATA</title>
+<title>Dark Code - HATA</title>
 <main>
   <div class="container">
     <div class="alert alert-danger mt-3">
